demo(app): fixed broken layout on small screens

--- a/demo/src/app/home/home.component.scss
+++ b/demo/src/app/home/home.component.scss
@@ -1,11 +1,17 @@
 .logo {
-    width: 256px;
-    height: 256px;
-    margin-top: 1.4rem;
+  width: 256px;
+  height: 256px;
+  margin-top: 1.4rem;
 }
 
-.home {
-    margin-top: 1.0rem;
+.jumbotron {
+  margin-top: 1.0rem;
+
+  h1 {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+  }
 }
 
 button:focus {
