--- a/demo/src/app/shared/header/header.component.scss
+++ b/demo/src/app/shared/header/header.component.scss
@@ -1,3 +1,11 @@
 .navbar {
-    background: hsla(0,0%,100%,.95)
+  background: hsla(0, 0%, 100%, .95)
+}
+
+header {
+  a {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+  }
 }
